--- a/example_app/CMakeLists.txt
+++ b/example_app/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-add_executable(example_app
+add_executable(example_app EXCLUDE_FROM_ALL
     dramsim_test.cpp
     dramsim_test.hpp
 )
